# command-line-rust

./: .gitignore  Cargo.toml
0-template/: Cargo.toml
1-echor/: Cargo.toml
1-echor/src/: main.rs
1-echor/tests/: cli.rs
10-tailr/: Cargo.toml
10-tailr/src/: lines_bytes.rs  main.rs  take_value.rs
10-tailr/tests/: cli.rs
11-fortuner/: Cargo.toml
11-fortuner/src/: find_files.rs  fortunes.rs  main.rs
11-fortuner/tests/: cli.rs
12-calr/: Cargo.toml
12-calr/src/: main.rs
12-calr/tests/: cli.rs
2-catr/: Cargo.toml
2-catr/src/: main.rs
3-headr/: Cargo.toml
3-headr/src/: main.rs
3-headr/tests/: cli.rs
4-wcr/: Cargo.toml
4-wcr/src/: main.rs  tests.rs
5-uniqr/: Cargo.toml
5-uniqr/src/: main.rs
6-findr/: Cargo.toml
6-findr/src/: main.rs
7-cutr/: Cargo.toml
7-cutr/src/: main.rs  position_list.rs
7-cutr/src/extract/: bytes.rs  chars.rs  fields.rs  mod.rs
8-grepr/: Cargo.toml
8-grepr/src/: files.rs  find.rs  main.rs
9-commr/: Cargo.toml  mk-outs.sh
9-commr/src/: main.rs
template/: Cargo.toml
template/tests/: cli.rs
