[package]
name = "calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
regex = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
rand = "0.8"
sys-info = "0.9"